--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <div class="footer text-center">
-    <p>Made with <i class="fa fa-heart-o"></i> By Abdul Rafay </p>
+    <p>Made with <i class="fa-light fa-heart"></i> By Abdul Rafay </p>
     <p class="text-muted">&copy; Copyright 2022: GPL v3.0</p>
 </div>
