--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <%- include('../partials/head'); %>
+    <title>Home Page</title>
 </head>
-<body class="container">
+<body>
     <header>
         <%- include('../partials/header'); %>
     </header>
