--- a/views/pages/blog.ejs
+++ b/views/pages/blog.ejs
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/head'); %>
-    <title>Home Page</title>
+        <%- include('../partials/head'); %>
+        <title>Blog Post</title>
 </head>
 <body>
     <header>
         <%- include('../partials/header'); %>
     </header>
-    <main>
-        
-    </main>
-    
-    
-    
     <footer>
         <%- include('../partials/footer'); %>
     </footer>
-      
 </body>
 </html>
