--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="container p-3 my-3">
-    <nav class="navbar navbar-expand-sm navbar-light bg-light ">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
         <a href="#" class="navbar-brand">Abdul Rafay</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
@@ -7,16 +7,16 @@
         <div class="collapse navbar-collapse" id="navbarMenu" role="navigation">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active text-dark">Home</a>
+                    <a href="/index" class="nav-link active rgba-blue-light ">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active text-dark">Blog</a>
+                    <a href="/blog" class="nav-link active ">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active text-dark">Services</a>
+                    <a href="/service" class="nav-link active ">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link active text-dark">Login</a>
+                    <a href="login" class="nav-link active ">Login</a>
                 </li>
             </ul>
         </div>      
