--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,10 +20,11 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/abdul_rafay99" class="twitter"><i class="bi bi-twitter"></i></a>
+        <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/abdul_rafay99/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/abdul-rafay-0ab626197/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/rafay99-epic" class="github"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
