--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,8 +8,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<!-- Font Awesome  4 Online Link
-<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+<!-- Font Awesome  4 Online Link -->
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <!-- Linking the external css File in the public folder -->
 <link rel="stylesheet" href="/assets/css/style.css">
