adding emv File and Chaging a couple of pages

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,6 +37,13 @@
         <section class="contact" id="contact">
             <%- include('../contact/contact'); %> 
         </section>
+
+        <!-- This is for the blog section -->
+        <section class="blog" id="blog">
+            <%- include('../blog/blog'); %>
+        </section>
+
+
     
     </main>
 
