--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -1,4 +1,77 @@
+
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv = "refresh" content = "5; url = /index" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading Screen</title>
+    <style>
+        body {
+            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+          }
+          .background {
+            position: absolute;
+            left: 0;
+            right: 0;
+            background: linear-gradient(to top, black 0%, #222 50%, black 100%);
+            width: 100%;
+            height: 100%;
+            display: table;
+          }
+          .loader {
+            color: white;
+            font-family: Ubuntu Mono, sans-serif;
+            font-weight: bold;
+            animation-duration: 4s;
+            animation-name: spread;
+            animation-iteration-count: infinite;
+            transform: translatez(0,0,0);
+            text-transform: uppercase;
+            display: table-cell;
+            vertical-align: middle;
+            font-size: 1.3em;
+            letter-spacing: 6em;
+            text-indent: -100%;
+          }
+          @keyframes spread {
+            from {
+              letter-spacing: 6em;
+              text-indent: -150%;
+            }
+            5% {
+            }
+            50% {
+              text-indent: 50%;
+              letter-spacing: 0.3em;
+            }
+            95% {
+            }
+            to {
+              letter-spacing: 6em;
+              text-indent: 120%;
+            }
+          }
+    </style>
+</head>
+<body>
+    <div class="background">
+        <p class="loader">Loading</p>
+      </div>
+      <link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:700' rel='stylesheet' type='text/css'>
+</body>
+</html>
+
+
+
+
+
+<!-- This is the Animation Loading Screen using Javascript CSS and HTML  -->
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -136,4 +209,4 @@
     }
     </script>
 </body>
-</html>
+</html> -->
