--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -48,3 +48,9 @@
 
 <!-- Template Main CSS File -->
 <link href="/css/style.css" rel="stylesheet">
+
+<!-- Links for the Login Screen -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
