--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,7 @@
-  <!-- ======= Header ======= -->
-  <header id="header">
+<header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Abdul Rafay</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <h1><a href="/index">Abdul Rafay</a></h1>
       <h2>I'm a passionate <span> Software Engineer </span> from Pakistan</h2>
 
       <nav id="navbar" class="navbar">
@@ -15,9 +12,14 @@
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="#blog">Blogs</a></li>
+          <li><a class="nav-link" href="/login">Login</a></li>
+
+          
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
 
       <div class="social-links">
         <a href="https://twitter.com/abdul_rafay99" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -29,4 +31,3 @@
 
     </div>
   </header>
-  <!-- End Header -->
