--- a/views/portfolio-details/portfolio-apps.ejs
+++ b/views/portfolio-details/portfolio-apps.ejs
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <%- include('../partials/head'); %>
+</head>
+
+<body>
+
+  <main id="main">
+
     <!-- ======= Portfolio Details ======= -->
     <div id="portfolio-details" class="portfolio-details">
       <div class="container">
@@ -11,15 +22,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="/img/portfolio/" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="/img/portfolio/portfolio-details-3.jpg" alt="">
                 </div>
 
               </div>
@@ -46,3 +57,15 @@
 
       </div>
     </div><!-- End Portfolio Details -->
+
+  </main><!-- End #main -->
+
+  <footer>
+          <%- include('../credit/credit' ); %> 
+          <%- include('../partials/footer'); %>
+  </footer>
+  
+
+</body>
+
+</html>
