--- a/views/portfolio-details/portfolio-script-bot-class.ejs
+++ b/views/portfolio-details/portfolio-script-bot-class.ejs
@@ -16,22 +16,22 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Bot Online Class Taker</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="/img/portfolio/" alt="">
+                  <img src="/img/portfolio/Script/class-bot-taker.png" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -42,14 +42,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Script</li>
+              <li><strong>Client</strong>: Personal Project</li>
+              <li><strong>Project date</strong>: 20th March 2019</li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/rafay99-epic/Bot-Class-Taker">Github</a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              In the erra of Online classes, I have designed a bot that will open your browser and login into your outllok account and then join meet according to the time table which will be provide by the user.
             </p>
           </div>
 
