--- a/views/portfolio-details/portfolio-script-terminal-config.ejs
+++ b/views/portfolio-details/portfolio-script-terminal-config.ejs
@@ -16,21 +16,13 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Terminal Config</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="/img/portfolio/" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="/img/portfolio/portfolio-details-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="/img/portfolio/Script/Terminal Config.png" alt="">
                 </div>
 
               </div>
@@ -42,14 +34,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Script</li>
+              <li><strong>Client</strong>: Personal Project</li>
+              <li><strong>Project date</strong>: 20th March 2020</li>
+              <li><strong>Project URL</strong>: <a href="">Github</a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              Linux Terminal for a useris to important, make it fast and beautiful so for this purpose I have designed and constructed this script that can make linux terminal more beautiful.
             </p>
           </div>
 
