--- a/views/portfolio/portfolio.ejs
+++ b/views/portfolio/portfolio.ejs
@@ -26,7 +26,7 @@
             <p>A application installer is a app that can be used to install different application for Linux Operating System.</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/application Installer.png" class="  data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-apps-application-installer" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
             <p>An astronaut lost in space, trying to reach his space-ship before his ship is destoryed.</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/Run-game.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-apps-run-game" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
             <p>This is a script that will launch your google chrome and then open teams and then join your class according to you time table</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/class-bot-taker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-script-bot-class" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
         </div>
       </div> -->
 
-      <!-- Virus Likker Game -->
+      <!-- Virus kikker Game -->
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
           <img src="/img/portfolio/Virus-Killer.png" class="img-fluid" alt="">
@@ -97,7 +97,7 @@
             <p>A saviour is inside a human body killing all of the virus before it is too late.</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/Virus-Killer.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-apps-virus-killer" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <p>Any Terminal, It's kitty or Alacritty you can config the terminal the best way and with best feature.</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/Terminal Config.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-script-terminal-config" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
             <p>It's a linux script that can update your system with just one command in linux.</p>
             <div class="portfolio-links">
               <a href="/img/portfolio/Routine-Maintenance.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="./portfolio-details" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              <a href="./portfolio-script-update-system" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
