--- a/views/contact/contact.ejs
+++ b/views/contact/contact.ejs
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <form action="contact.php" method="POST" role="form" class="php-email-form mt-4">
+    <form action="https://formsubmit.co/d38a9378f048c605db943e569945f766" method="POST" role="form" class="php-email-form mt-4">
       <div class="row">
         <div class="col-md-6 form-group">
           <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -64,6 +64,9 @@
       </div>
       <div class="form-group mt-3">
         <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+      </div>
+      <div>
+        <input type="hidden" name="_captcha" value="false">
       </div>
       <div class="my-3">
         <div class="loading">Loading</div>
