--- a/views/login/dashboard.ejs
+++ b/views/login/dashboard.ejs
@@ -8,6 +8,14 @@
     <header>
         <%- include('../partials/header'); %>
     </header>
+
+    <main>
+
+        <h1>The page is rending</h1>
+
+
+    </main>
+
     <footer>
         <%- include('../partials/footer'); %>
     </footer>
