--- a/views/pages/loading.ejs
+++ b/views/pages/loading.ejs
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv = "refresh" content = "5; url = /index" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen</title>
+    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <title>Welcome Screen</title>
     <style>
         body {
             overflow-x: hidden;
@@ -60,7 +63,7 @@
 </head>
 <body>
     <div class="background">
-        <p class="loader">Loading</p>
+        <p class="loader">Welcome</p>
       </div>
       <link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:700' rel='stylesheet' type='text/css'>
 </body>
