--- a/views/contact/contact.ejs
+++ b/views/contact/contact.ejs
@@ -11,7 +11,7 @@
         <div class="info-box">
           <i class="bx bx-map"></i>
           <h3>My Address</h3>
-          <p>House Number 1182 Street 37 Abu Bakar Block Bahria Town Phase 8, Islamabad, Pakistan</p>
+          <p>Bahria Town Phase 8, Islamabad, Pakistan</p>
         </div>
       </div>
 
