--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,10 +2,10 @@
     <div class="container">
 
       <h1><a href="/index">Abdul Rafay</a></h1>
-      <h2>I'm a passionate <span> Software Engineer </span> from Pakistan</h2>
+      <h2 style="font-weight: bold;" >I'm a passionate <span style="color: white;"> Software Engineer </span> from Pakistan</h2>
 
       <nav id="navbar" class="navbar">
-        <ul>
+        <ul style="font-weight: bold;">
           <li><a class="nav-link active" href="/index">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
