--- a/views/resume/resume.ejs
+++ b/views/resume/resume.ejs
@@ -68,6 +68,20 @@
         </div>
 
         <div class="resume-item">
+          <h4>Intership</h4>
+          <h5>2022 - 2022</h5>
+          <p><em>Shaigan Pharmaceuticals, PK</em></p>
+          <p>In IT Department </p>
+          <p>
+          <ul>
+            <li>Trouble Shooting</li>
+            <li>configuration Of Servers</li>
+            <li>Maintaining and Deploying Systems</li>
+          </ul>
+          </p>
+        </div>
+
+        <div class="resume-item">
           <h4>Certification</h4>
           <h5>2020-2021</h5>
           <p><em>Samsung Innovation Campus </em></p>
