Updating Files in Development Branch

--- a/views/portfolio/portfolio.ejs
+++ b/views/portfolio/portfolio.ejs
@@ -45,6 +45,20 @@
           </div>
         </div>
       </div>
+      <!-- One Power Web site -->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="portfolio-wrap">
+          <img src="/img/portfolio/one-power.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>One Power Organization Website</h4>
+            <p>Using the Backend and Template Technolgies I have created a stunning website for One Power Pvt.</p>
+            <div class="portfolio-links">
+              <a href="/img/portfolio/one-power.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="./one-power-detail" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Running Game App-->
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
