--- a/views/resume/resume.ejs
+++ b/views/resume/resume.ejs
@@ -82,6 +82,19 @@
         </div>
 
         <div class="resume-item">
+          <h4>Junior Web Developer</h4>
+          <h5>2022 - Now</h5>
+          <p><em>Swam Technologies, NUST Islamabad</em></p>
+          <p>
+          <ul>
+            <li>Currently I am working a Web Developer in Swam Technologies.</li>
+            <li>My role include Problem Solving.</li>
+            <li>Creating multiple Web Sites for various Clients.</li>
+          </ul>
+          </p>
+        </div>
+
+        <div class="resume-item">
           <h4>Certification</h4>
           <h5>2020-2021</h5>
           <p><em>Samsung Innovation Campus </em></p>
