--- a/views/contact/contact.ejs
+++ b/views/contact/contact.ejs
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <form action="https://formsubmit.co/d38a9378f048c605db943e569945f766" method="POST" role="form" class="php-email-form mt-4">
+    <form action="https://formsubmit.co/99marafay@gmail.com" method="POST" role="form" class="php-email-form mt-4">
       <div class="row">
         <div class="col-md-6 form-group">
           <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
