Updating Files in Development Branch

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header id="header">
     <div class="container">
 
-      <h1><a href="/index">Abdul Rafay</a></h1>
+      <h1><a href="/">Abdul Rafay</a></h1>
       <h2 style="font-weight: bold;" >I'm a passionate <span style="color: white;"> Software Engineer </span> from Pakistan</h2>
 
       <nav id="navbar" class="navbar">
         <ul style="font-weight: bold;">
-          <li><a class="nav-link active" href="/index">Home</a></li>
+          <li><a class="nav-link active" href="/">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Services</a></li>
@@ -14,9 +14,6 @@
           <li><a class="nav-link" href="#contact">Contact</a></li>
           <!-- <li><a class="nav-link" href="#blog">Blogs</a></li>  -->
           <!-- <li><a class="nav-link" href="/login">Login</a></li>  -->
-
-          
-          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -28,6 +25,5 @@
         <a href="https://www.linkedin.com/in/abdul-rafay-0ab626197/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/rafay99-epic" class="github"><i class="bi bi-github"></i></a>
       </div>
-
     </div>
   </header>
