Fixing Bugs and making Blog website

--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -22,17 +22,17 @@
     <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
     <title>Abdul Rafay - Blog</title>
 </head>
 <body>
     <div class="container">
         <h1 class="mb-4 ">Blog Article</h1>
         <a href="/articles/new" class="btn btn-success"> New Articles</a>
+            <%- articles.foreach(article => { %>
+                <div class="card mt-4 ">
+                    <%- article.title  %> 
+                </div>
+            <%- }) %>  
     </div>
-
-
-
-
 </body>
 </html>
