--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,14 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
+      <!-- <nav id="navbar" class="navbar-mobile">
+        <li><a class="nav-link active" href="/">Home</a></li>
+        <li><a class="nav-link" href="#about">About</a></li>
+        <li><a class="nav-link" href="#resume">Resume</a></li>
+        <li><a class="nav-link" href="#services">Services</a></li>
+        <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+        <li><a class="nav-link" href="#contact">Contact</a></li>
+      </nav> -->
 
       <div class="social-links">
         <a href="https://twitter.com/abdul_rafay99" class="twitter"><i class="bi bi-twitter"></i></a>
