Updating the Resume

--- a/views/resume/resume.ejs
+++ b/views/resume/resume.ejs
@@ -82,14 +82,14 @@
         </div>
 
         <div class="resume-item">
-          <h4>Junior Web Developer</h4>
+          <h4>Web Developer & Machine Learning Engineer</h4>
           <h5>2022 - Now</h5>
           <p><em>Swam Technologies, NUST Islamabad</em></p>
           <p>
           <ul>
-            <li>Currently I am working a Web Developer in Swam Technologies.</li>
-            <li>My role include Problem Solving.</li>
-            <li>Creating multiple Web Sites for various Clients.</li>
+            <li>Currently I am working a Web Developer and machine learning engineer in Swam Technologies.</li>
+            <li>My responsibilities include developing a website's backend and training various machine learning models for various use cases. </li>
+            <!-- <li>Creating multiple Web Sites for various Clients.</li> -->
           </ul>
           </p>
         </div>
@@ -101,10 +101,8 @@
           <p>
           <ul>
             <li>I have completed the samsung innovation campus(SIC).</li>
-            <!-- <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li> -->
             <li>In this certification I learned the basic and advanced comcepts of Machine Learning, Deep Learning.</li>
             <li>During this certification I have completed multiple projects and learned how to implement the Graphically Interface and Machine Learning.</li>
-            <!-- <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
           </ul>
           </p>
         </div>
