--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -18,7 +18,7 @@
           <div class="col-lg-6">
               <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 March 1999</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://rafay-99.el.r.appspot.com/</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://rafay99.info/</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+92 3035650798</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Islamabad, Pakistan</span></li>
               </ul>
