--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
           <li><a class="nav-link" href="#services">Services</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
-          <!-- <li><a class="nav-link" href="#blog">Blogs</a></li>  -->
+          <li><a class="nav-link" href="https://rafayblogs.tech/">Blogs</a></li> 
           <!-- <li><a class="nav-link" href="/login">Login</a></li>  -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
