--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,9 @@
 </head>
 <body>
      <header>
-            <%- include('../partials/header'); %>
+            <%- include('../partials/header'); %>            
+            <!-- Tracking Softwaare Umami Cloud -->
+            <script async defer src="https://analytics.umami.is/script.js" data-website-id="5af65bc3-1cbf-43ab-8987-9af6cc4d4aef"></script>
     </header> 
     <main>
         <!-- This is the about Section-->
